--- a/src/app/flights/flights.component.html
+++ b/src/app/flights/flights.component.html
@@ -6,7 +6,7 @@
     <div class="p-3" *ngFor="let data of finalData;">
       <div class="row px-2">
         <div [ngClass]="{'optclr':data.status=='operational','nonoptclr':data.status=='nonoperational','degretclr':data.status=='degret','unknownclr':data.status=='unknown'}" 
-        class="col-1 radius border border-dark" style="width:5%;overflow: hidden;"
+        class="col-1 radius border border-dark" style="overflow: hidden;"
         placement="end" [ngbTooltip]="tipContent">
         <section>
           <ng-template #tipContent >            
@@ -27,6 +27,7 @@
           </ng-template>
         </section>
       </div>
+      <br>
         <div class="col-11">
             <div class="row justify-content-center text-center">
               <div class="col-sm-5 border border-dark bold" style="background-color:white">
