--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -53,7 +53,7 @@
 
 
 <div class="container" *ngIf="buttonToggle">
-<div class="row">
+<div class="row" *ngIf="getData ;else spinner">
   <div class="col-sm-3"*ngFor="let data of getData;" >
     <div class="card" [routerLink]="['flight']" routerLinkActive="active" (click)="getID(data.id)" >
       <div class="card-body">
@@ -74,5 +74,11 @@
 
 
 
-
+<ng-template #spinner >
+  <div class="container text-center">
+  <div class="spinner-border m-5 " role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
+</ng-template>
 
